# taskbridge

./: .gitignore  .readthedocs.yaml  CNAME  Gemfile  README.md  _config.yml  app.py  bitmirror.py  index.markdown  pyproject.toml  pytest.ini  risky.sh  setup.py  taskbridge.py  tox.ini
.github/workflows/: python-app.yml
Controller/: note_parser.py  notes_as.py  notes_sync.py  reminder_sync.py  reminders_as.py
Model/: LinkedCalendar.py  LinkedFolder.py  NoteFolder.py  Reminder.py  Util.py  __init__.py
_includes/: head-custom.html
_layouts/: default.html
_posts/: 2024-04-15-welcome-to-jekyll.markdown
_site/: 404.html  feed.xml  index.html
_site/about/: index.html
_site/jekyll/update/2024/04/15/: welcome-to-jekyll.html
assets/css/: style.scss
docs/source/: conf.py  index.rst
docs/source/_autosummary/: taskbridge.cli.rst  taskbridge.cli.tbcli.TaskBridgeCli.rst  taskbridge.cli.tbcli.main.rst  taskbridge.cli.tbcli.rst  taskbridge.gui.TaskBridge.rst  taskbridge.gui.app.rst  taskbridge.gui.rst  taskbridge.gui.viewmodel.mainwindow.MainWindow.rst  taskbridge.gui.viewmodel.mainwindow.rst  taskbridge.gui.viewmodel.notecheckbox.NoteCheckBox.rst  taskbridge.gui.viewmodel.notecheckbox.rst  taskbridge.gui.viewmodel.remindercheckbox.ReminderCheckbox.rst  taskbridge.gui.viewmodel.remindercheckbox.rst  taskbridge.gui.viewmodel.rst  taskbridge.gui.viewmodel.taskbridgeapp.TaskBridgeApp.rst  taskbridge.gui.viewmodel.taskbridgeapp.rst  taskbridge.gui.viewmodel.threadedtasks.LoggingThread.rst  taskbridge.gui.viewmodel.threadedtasks.NotePreWarm.rst  taskbridge.gui.viewmodel.threadedtasks.ReminderPreWarm.rst  taskbridge.gui.viewmodel.threadedtasks.Sync.rst  taskbridge.gui.viewmodel.threadedtasks.rst  taskbridge.gui.viewmodel.threadedtasks.run_continuously.rst  taskbridge.gui.viewmodel.trayicon.TaskBridgeTray.rst  taskbridge.gui.viewmodel.trayicon.rst  taskbridge.gui.viewmodel.ui_aboutwindow.Ui_Dialog.rst  taskbridge.gui.viewmodel.ui_aboutwindow.rst  taskbridge.gui.viewmodel.ui_mainwindow.Ui_MainWindow.rst  taskbridge.gui.viewmodel.ui_mainwindow.rst  taskbridge.helpers.DRY_RUN.rst  taskbridge.helpers.DateUtil.rst  taskbridge.helpers.FunctionHandler.rst  taskbridge.helpers.get_uuid.rst  taskbridge.helpers.html_to_markdown.rst  taskbridge.helpers.rst  taskbridge.helpers.run_applescript.rst  taskbridge.helpers.settings_folder.rst  taskbridge.helpers.temp_folder.rst  taskbridge.notes.controller.NoteController.rst  taskbridge.notes.controller.rst  taskbridge.notes.controller.sync.rst  (+29 more)
taskbridge/: __init__.py  helpers.py
taskbridge/cli/: __init__.py  tbcli.py
taskbridge/gui/: TaskBridge.py  __init__.py  about.ui  app.py  taskbridge.ui
taskbridge/gui/assets/: TaskBridge.icns
taskbridge/gui/assets/source/: TaskBridge_Icon.xcf  bridge_animated_black.xcf  bridge_animated_optimised.xcf  local_and_remote_black.xcf  local_and_remote_white.xcf  tb_disk_icon.icns
taskbridge/gui/viewmodel/: __init__.py  mainwindow.py  notecheckbox.py  remindercheckbox.py  taskbridgeapp.py  threadedtasks.py  trayicon.py  ui_aboutwindow.py  ui_mainwindow.py
taskbridge/notes/: __init__.py  controller.py
taskbridge/notes/model/: __init__.py  note.py  notefolder.py  notescript.py
taskbridge/reminders/: __init__.py  controller.py
taskbridge/reminders/model/: __init__.py  reminder.py  remindercontainer.py  reminderscript.py
tests/: conf.json  test_attachment.py  test_helpers.py  test_locallist.py  test_localnotefolder.py  test_note.py  test_notecontroller.py  test_notefolder.py  test_reminder.py  test_remindercontainer.py  test_remindercontroller.py  test_remotecalendar.py  test_remotenotefolder.py
tests/resources/: attachment_1_b64.b64  attachment_2_b64.b64  mock_simplenote_staged.staged  mock_testnote1_html.html  mock_testnote1_md.md  mock_testnote1_staged.staged  mock_testnote2_html.html  mock_testnote2_md.md  testnote2_direct.html  testnote2_direct.md
view/: taskbridge.ui
view/assets/: bridge.xcf  bridge_animated_white.xcf
view/viewmodel/: mainwindow.py  remindercheckbox.py  taskbridgeapp.py  threadedtasks.py  trayicon.py  ui_mainwindow.py
