[tool.poetry]
name = "TaskBridge"
version = "0.1.1"
description = "Export your Apple Reminders & Notes to NextCloud, a local folder, or CalDav - and keep them in sync!"
keywords = ["sync", "note sync", "reminder sync", "cloud notes", "cloud reminders"]
authors = ["Pint-Sized Software <hello@pintsized.dev>"]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Topic :: Utilities"
]
license = "GPL-3.0-or-later"
homepage = "https://taskbridge.app/"
repository = "https://github.com/pint-sized/taskbridge"

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.6.1"
darkdetect = "^0.8.0"
keyring = "^25.2.1"
schedule = "^1.2.1"
caldav = "^1.3.9"
markdown2 = "^2.4.13"
markdownify = "^0.12.1"

[tool.poetry.group.dev.dependencies]
py2app = "^0.28.7"
flake8 = "^7.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^2.0.1"
sphinx-rtd-dark-mode = "^1.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
python-decouple = "^3.8"
coveralls = "^3.3.1"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.py2app.bundle.main]
name = "TaskBridge"
script = "taskbridge/gui/app.py"
build-type = "standalone"

[tool.poetry.scripts]
tbcli = 'taskbridge.cli.tbcli:main'

[tool.coverage.run]
omit = [
    "*tests*",
]